# simple-read

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  README.md  cmake_install.cmake
.github/workflows/: devskim.yml
cmd/: main.cpp
docs/: CODEOWNERS.md  README.md  ROADMAP.md  icon.kra  icon.kra~  style_guide_line.md  technical_requirement.md
docs/benchmarks/: .test_long.txt.swp
docs/samples/: test.csv  test.docx  test.txt  test_long.txt  test_short.txt
include/darwin/cairo/: cairo-features.h
include/darwin/cairomm/cairomm/: cairommconfig.h  context.h  device.h  enums.h  exception.h  fontface.h  fontoptions.h  pattern.h  region.h  scaledfont.h  surface.h  win32_surface.h
include/darwin/gdk/gdk/: gdkversionmacros.h
include/darwin/gdkmm/: gdkmmconfig.h
include/darwin/gdkmm/gdkmm/: applaunchcontext.h  color.h  cursor.h  device.h  devicemanager.h  display.h  displaymanager.h  dragcontext.h  drawingcontext.h  event.h  frameclock.h  frametimings.h  glcontext.h  monitor.h  pixbuf.h  pixbufanimation.h  pixbufanimationiter.h  pixbufformat.h  pixbufloader.h  rectangle.h  rgba.h  screen.h  seat.h  timecoord.h  types.h  visual.h  window.h
include/darwin/gdkmm/gdkmm/private/: applaunchcontext_p.h  color_p.h  cursor_p.h  device_p.h  devicemanager_p.h  display_p.h  displaymanager_p.h  dragcontext_p.h  drawingcontext_p.h  event_p.h  frameclock_p.h  frametimings_p.h  glcontext_p.h  monitor_p.h  pixbuf_p.h  pixbufanimation_p.h  pixbufanimationiter_p.h  pixbufformat_p.h  pixbufloader_p.h  rectangle_p.h  rgba_p.h  screen_p.h  seat_p.h  timecoord_p.h  types_p.h  visual_p.h  window_p.h
include/darwin/giomm/: giommconfig.h
include/darwin/giomm/giomm/: action.h  actiongroup.h  actionmap.h  appinfo.h  appinfomonitor.h  applaunchcontext.h  application.h  applicationcommandline.h  asyncinitable.h  asyncresult.h  bufferedinputstream.h  bufferedoutputstream.h  cancellable.h  charsetconverter.h  converter.h  converterinputstream.h  converteroutputstream.h  credentials.h  datainputstream.h  dataoutputstream.h  dbusactiongroup.h  dbusaddress.h  dbusauthobserver.h  dbusconnection.h  dbuserror.h  dbuserrorutils.h  dbusinterface.h  dbusinterfaceskeleton.h  dbusinterfacevtable.h  dbusintrospection.h  dbusmenumodel.h  dbusmessage.h  dbusmethodinvocation.h  dbusobject.h  dbusobjectmanager.h  dbusobjectmanagerclient.h  dbusobjectmanagerserver.h  dbusobjectproxy.h  dbusobjectskeleton.h  dbusownname.h  (+98 more)
include/darwin/giomm/giomm/private/: action_p.h  actiongroup_p.h  actionmap_p.h  appinfo_p.h  appinfomonitor_p.h  applaunchcontext_p.h  application_p.h  applicationcommandline_p.h  asyncinitable_p.h  asyncresult_p.h  bufferedinputstream_p.h  bufferedoutputstream_p.h  cancellable_p.h  charsetconverter_p.h  (+124 more)
include/darwin/glib/: glibconfig.h
include/darwin/glibmm/: glibmm.h  glibmmconfig.h
include/darwin/glibmm/glibmm/: binding.h  bytearray.h  bytes.h  checksum.h  convert.h  date.h  datetime.h  enums.h  fileutils.h  iochannel.h  keyfile.h  markup.h  miscutils.h  module.h  nodetree.h  optioncontext.h  optionentry.h  optiongroup.h  regex.h  shell.h  spawn.h  timezone.h  unicode.h  uriutils.h  variant.h  variant_basictypes.h  variantdict.h  variantiter.h  varianttype.h
include/darwin/gtk/gtk/: gtkversion.h
include/darwin/gtkmm/: gtkmm.h  gtkmmconfig.h
include/darwin/gtkmm/gtkmm/: aboutdialog.h  accelgroup.h  accellabel.h  action.h  actionable.h  actionbar.h  actiongroup.h  activatable.h  adjustment.h  alignment.h  appchooser.h  appchooserbutton.h  appchooserdialog.h  appchooserwidget.h  application.h  applicationwindow.h  arrow.h  aspectframe.h  assistant.h  bin.h  border.h  box.h  buildable.h  builder.h  button.h  buttonbox.h  calendar.h  cellarea.h  cellareabox.h  cellareacontext.h  celleditable.h  celllayout.h  cellrenderer.h  cellrendereraccel.h  cellrenderercombo.h  cellrendererpixbuf.h  cellrendererprogress.h  cellrendererspin.h  cellrendererspinner.h  cellrenderertext.h  (+192 more)
include/darwin/sigc++/: sigc++config.h
include/pdfmm/pdfmm/base/: pdfmm_config.h
src/: CMakeLists.txt  docxwindow.cpp  docxwindow.h  docxwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui.h
src/.qm/: project_en_150.qm  project_pl_150.qm  project_uk_150.qm
src/.qtc_clangd/: compile_commands.json
src/SimpleRead/: Info.plist  IwFBuf.json  SimpleRead.pro  SimpleRead.qdocconf  SimpleRead.qdocconfig  backend.cpp  backend.h  basewindow.cpp  basewindow.h  csvwindow.cpp  csvwindow.h  csvwindow.qml  csvwindowmodel.cpp  csvwindowmodel.h  database.cpp  database.h  dataview.cpp  dataview.h  docxwindow.cpp  docxwindow.h  docxwindow.qml  exceptions.cpp  exceptions.h  filewindow.cpp  filewindow.h  globalqmlengine.cpp  globalqmlengine.h  icon.icns  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.qml  mainwindow.ui  menubar.cpp  menubar.h  pdfwindow.cpp  pdfwindow.h  pdfwindow.qml  (+38 more)
src/build-project-Desktop_x86_darwin_generic_mach_o_64bit-Debug/: Makefile  moc_csvwindow.cpp  moc_docxwindow.cpp  moc_mainwindow.cpp  moc_pdfwindow.cpp  moc_settingswindow.cpp  moc_txtwindow.cpp  qmake_qmake_qm_files.qrc  qrc_qmake_qmake_qm_files.cpp  ui_csvwindow.h  ui_docxwindow.h  ui_mainwindow.h  ui_pdfwindow.h  ui_settingswindow.h  ui_txtwindow.h
src/build-project-Desktop_x86_darwin_generic_mach_o_64bit-Debug/.qtc_clangd/: compile_commands.json
src/project/: Info.plist  csvwindow.cpp  csvwindow.h  csvwindow.qml  csvwindow.ui  dataview.cpp  dataview.h  docxwindow.cpp  docxwindow.h  docxwindow.qml  docxwindow.ui  filedialog.cpp  filedialog.h  filedialogoptions.cpp  filedialogoptions.h  filewindow.cpp  filewindow.h  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.qml  mainwindow.ui  menubar.cpp  menubar.h  menubarcreator.cpp  menubarcreator.h  pdfwindow.cpp  pdfwindow.h  pdfwindow.qml  pdfwindow.ui  project.pro  qmltyperegistrator.cpp  qmltyperegistrator.h  qmlwindow.cpp  qmlwindow.h  settingswindow.cpp  settingswindow.h  settingswindow.qml  (+5 more)
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
(+691 files in other folders)
